	Fixed passing of quotes in OID for check_snmp (#1985230 - Jan Wagner, patch by John Barbuto)
	Fixed check_http sending HTTP/1.0 with v1.1 headers (#2638765)
	Fixed check_http not timing-out on redirects
	Fixed negate not printing the real timeout in ALRM handler when left to default
	negate timeout result is now configurable
	Fixed segfault in check_mysql with old slaves (#2696823 - Oskar Ahner)

1.4.13 25th Sept 2008
	Fix Debian bug #460097: check_http --max-age broken (Hilko Bengen)
	Optimised pst3 for systems with large number of processes (Duncan Ferguson)
	Updated Nagios::Plugin to 0.27
	Fix Debian bug #479013: check_dig's -l is mandatory now (sf.net #1986306)
	check_dig now returns CRITICAL instead of WARNING when no answer section is found
	check_procs now captures stderr in external command and adds to plugin output
	check_snmp now only prints perfdata for non numeric values (#1867716)
	check_icmp now supports packet size modification
	check_http -e now accepts a comma-delimited list of expected status codes (Sven Nierlein)
	libtap now included with this distribution for easier testing. Run ./configure with --enable-libtap
	check_ntp_peer/check_ntp_time used to show port in --help but ignored the argument - now implemented
	Fix possible segfault in check_ntp_peer with deliberately invalid packets

1.4.12 27th May 2008
	Added ./check_nt -v INSTANCES to count number of instances (Alessandro Ren)
	New check_icmp -s option to specify the source IP address
	check_dns now sorts addresses for testing results for more than one returned IP (Matthias Urlichs)
	Fix segfault in check_ntp_time and (deprecated) check_ntp (Bug #1862300)
	check_disk should now work with large file systems (2TB+) on all archs that supports it
	Fixed check_disk disk usage calculation when using --group=NAME (related to bug #1348746)
	Fix help text of check_ntp* (Bug #1880095)
	Fix bugs and flaws in best offset server selection of check_ntp_time and (deprecated) check_ntp